--- a/front-end/index.html
+++ b/front-end/index.html
@@ -11,8 +11,13 @@
     <header>
       <h1>To-do List</h1>
       <div class="header-login">
-        <a href="/front-end/login.html">Login</a>
-        <a href="/front-end/register.html">Register</a>
+        <div class="home">
+          <a href="/front-end/index.html">Home</a>
+        </div>
+        <div class="account">
+          <a href="/front-end/login.html">Login</a>
+          <a href="/front-end/register.html">Registrar</a>
+        </div>
       </div>
     </header>
     <form class="container">
