--- a/front-end/src/pages/login.html
+++ b/front-end/src/pages/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" href="styles/register.css" />
+    <link rel="stylesheet" href="../styles/register.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <title>Register</title>
@@ -15,31 +15,17 @@
       <h1>To-do List</h1>
       <div class="header-login">
         <div class="home">
-          <a href="/front-end/index.html">Home</a>
+          <a href="/front-end/src/pages/index.html">Home</a>
         </div>
         <div class="account">
-          <a href="/front-end/login.html">Login</a>
-          <a href="/front-end/register.html">Registrar</a>
+          <a href="/front-end/src/pages/login.html">Login</a>
+          <a href="/front-end/src/pages/register.html">Registrar</a>
         </div>
       </div>
     </header>
     <div id="container-login">
-      <h1>Register</h1>
+      <h1>Login</h1>
       <form id="form-login">
-        <label for="login-name" class="form-label">Insira seu nome:</label>
-        <input
-          type="text"
-          class="form-input"
-          id="form-name"
-          placeholder="ex: John Doe"
-        />
-        <label for="login-email" class="form-label">Insira seu email:</label>
-        <input
-          type="email"
-          id="form-email"
-          placeholder="ex: johndoe@gmail.com"
-          class="form-input"
-        />
         <label for="login-username" class="form-label"
           >Insira seu username:</label
         >
@@ -52,12 +38,14 @@
         <label for="login-password" class="form-label">Insira sua senha:</label>
         <input type="password" id="form-password" class="form-input" />
         <div class="container-buttons">
-          <button class="form-buttons" type="submit">Registrar</button>
-          <button class="form-buttons" type="button">Reset</button>
+          <button class="form-buttons" type="submit">Login</button>
+          <button class="form-buttons" type="button">
+            Esqueci minha senha
+          </button>
         </div>
         <div id="registerResult"></div>
       </form>
     </div>
-    <script src="/front-end/scripts/register.js"></script>
+    <script src="/front-end/src/scripts/register.js"></script>
   </body>
 </html>
