Add: Login/Task vinculate to player

--- a/front-end/src/pages/index.html
+++ b/front-end/src/pages/index.html
@@ -64,6 +64,6 @@
       <ul id="tasks"></ul> 
     </form>
 
-    <script type="module" src="../scripts/scripts.js"></script>
+    <script type="module" src="../scripts/addTaskListener.js"></script>
   </body>
 </html>
