--- a/front-end/src/pages/login.html
+++ b/front-end/src/pages/login.html
@@ -38,7 +38,9 @@
         <label for="login-password" class="form-label">Insira sua senha:</label>
         <input type="password" id="form-password" class="form-input" />
         <div class="container-buttons">
-          <button class="form-buttons" type="submit">Login</button>
+          <button class="form-buttons" type="submit" id="loginRequest">
+            Login
+          </button>
           <button class="form-buttons" type="button">
             Esqueci minha senha
           </button>
@@ -46,6 +48,6 @@
         <div id="registerResult"></div>
       </form>
     </div>
-    <script src="/front-end/src/scripts/register.js"></script>
+    <script type="module" src="/front-end/src/scripts/login.js"></script>
   </body>
 </html>
