Add: showUserTasks on homepage

--- a/front-end/src/pages/index.html
+++ b/front-end/src/pages/index.html
@@ -59,5 +59,6 @@
     </form>
 
     <script type="module" src="../scripts/addTaskListener.js"></script>
+    <script type="module" src="../scripts/User/useCases/showUserTasks.js"></script>
   </body>
 </html>
