add: MongoDB database

--- a/front-end/src/pages/register.html
+++ b/front-end/src/pages/register.html
@@ -53,7 +53,9 @@
         <input type="password" id="form-password" class="form-input" />
         <div class="container-buttons">
           <button class="form-buttons" type="submit">Registrar</button>
-          <button class="form-buttons" type="button">Limpar campos</button>
+          <button class="form-buttons" type="button" id="resetForm">
+            Limpar campos
+          </button>
         </div>
         <div id="registerResult"></div>
       </form>
