add: Redirect Pages

--- a/front-end/src/pages/index.html
+++ b/front-end/src/pages/index.html
@@ -17,7 +17,7 @@
           <a href="/front-end/src/pages/index.html">Home</a>
         </div>
         <div class="account">
-          <a href="/front-end/src/pages/login.html">Login</a>
+          <a id="loginButton" href="/front-end/src/pages/login.html">Login</a>
           <a href="/front-end/src/pages/register.html">Registrar</a>
         </div>
       </div>
