--- a/front-end/src/pages/register.html
+++ b/front-end/src/pages/register.html
@@ -18,7 +18,7 @@
           <a href="./index.html">Home</a>
         </div>
         <div class="account">
-          <a href="./login.html">Login</a>
+          <a id="loginButton" href="./login.html">Login</a>
           <a href="./register.html">Registrar</a>
         </div>
       </div>
