fix: paths in pages

--- a/front-end/src/pages/register.html
+++ b/front-end/src/pages/register.html
@@ -15,7 +15,7 @@
       <h1>To-do List</h1>
       <div class="header-login">
         <div class="home">
-          <a href="./index.html">Home</a>
+          <a href="../index.html">Home</a>
         </div>
         <div class="account">
           <a id="loginButton" href="./login.html">Login</a>
