--- a/front-end/src/pages/login.html
+++ b/front-end/src/pages/login.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="../styles/styles.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-    <title>Register</title>
+    <title>Login</title>
   </head>
   <body>
     <header>
       <h1>To-do List</h1>
       <div class="header-login">
         <div class="home">
-          <a href="/front-end/src/pages/index.html">Home</a>
+          <a href="../index.html">Home</a>
         </div>
         <div class="account">
-          <a href="/front-end/src/pages/login.html">Login</a>
-          <a href="/front-end/src/pages/register.html">Registrar</a>
+          <a id="loginButton" href="../pages/login.html">Login</a>
+          <a href="../pages/register.html">Registrar</a>
         </div>
       </div>
     </header>
@@ -48,6 +48,6 @@
         <div id="registerResult"></div>
       </form>
     </div>
-    <script type="module" src="/front-end/src/scripts/login.js"></script>
+    <script type="module" src="../scripts/login.js"></script>
   </body>
 </html>
