--- a/front-end/src/pages/register-success.html
+++ b/front-end/src/pages/register-success.html
@@ -16,11 +16,11 @@
       <h1>To-do List</h1>
       <div class="header-login">
         <div class="home">
-          <a href="/front-end/src/pages/index.html">Home</a>
+          <a href="../index.html">Home</a>
         </div>
         <div class="account">
-          <a id="loginButton" href="/front-end/src/pages/login.html">Login</a>
-          <a href="/front-end/src/pages/register.html">Registrar</a>
+          <a id="loginButton" href="../pages/login.html">Login</a>
+          <a href="../pages/register.html">Registrar</a>
         </div>
       </div>
     </header>
