--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css"/>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   </head>
@@ -14,11 +14,11 @@
       <h1>To-do List</h1>
       <div class="header-login">
         <div class="home">
-          <a href="/front-end/src/pages/index.html">Home</a>
+          <a href="./index.html">Home</a>
         </div>
         <div class="account">
-          <a id="loginButton" href="/front-end/src/pages/login.html">Login</a>
-          <a href="/front-end/src/pages/register.html">Registrar</a>
+          <a id="loginButton" href="./pages/login.html">Login</a>
+          <a href="./pages/register.html">Registrar</a>
         </div>
       </div>
     </header>
@@ -58,7 +58,7 @@
       <ul id="tasks"></ul> 
     </form>
 
-    <script type="module" src="../scripts/addTaskListener.js"></script>
-    <script type="module" src="../scripts/User/useCases/showUserTasks.js"></script>
+    <script type="module" src="./scripts/addTaskListener.js"></script>
+    <script type="module" src="./scripts/User/useCases/showUserTasks.js"></script>
   </body>
 </html>
