--- a/front-end/src/pages/login-success.html
+++ b/front-end/src/pages/login-success.html
@@ -29,7 +29,7 @@
     </div>
     <script
       type="module"
-      src="/front-end/src/scripts/successPage/loginSuccessfulPage.js"
+      src="../scripts/successPage/loginSuccessfulPage.js"
     ></script>
   </body>
 </html>
