fix: email needed to login

--- a/front-end/src/pages/login.html
+++ b/front-end/src/pages/login.html
@@ -26,12 +26,10 @@
     <div id="container-login">
       <h1>Login</h1>
       <form id="form-login">
-        <label for="login-username" class="form-label"
-          >Insira seu username:</label
-        >
+        <label for="login-email" class="form-label">Insira seu email:</label>
         <input
           type="text"
-          id="form-username"
+          id="form-email"
           placeholder="ex: johndoe"
           class="form-input"
         />
